qc pass: bgp routemap filtering with pathlimit with soft-reconfig
qc pass: bgp routepolicy filtering with pathlimit with soft-reconfig
qc pass: bgp change in pathlimit
qc pass: bgp change in pathlimit with soft-reconfig
---------------------------------- 2024-04-26 15:58:49 24.4.26
qc pass: secondary networks over ethernet
qc pass: secondary networks over dot1q vlan
---------------------------------- 2024-05-11 06:50:36 24.5.11
no qc pass: dhcp with excluded address
failed: dhcp with excluded address
---------------------------------- 2024-05-11 07:24:54 24.5.11
no failed: dhcp with excluded address
qc pass: dhcp with excluded address
---------------------------------- 2024-05-12 09:46:25 24.5.12
no qc pass: dhcp with excluded address
failed: dhcp with excluded address
---------------------------------- 2024-05-12 11:49:52 24.5.12
no failed: dhcp with excluded address
qc pass: dhcp with excluded address
---------------------------------- 2024-06-09 08:46:25 24.6.9
qc pass: unnamed
---------------------------------- 2024-06-09 09:27:23 24.6.9
no qc pass: unnamed
---------------------------------- 2024-06-09 12:08:32 24.6.9
qc pass: cross connect tunnel interfaces
qc pass: p4lang: gre local connect
---------------------------------- 2024-06-09 18:57:15 24.6.9
qc pass: cross connect different tunnel interfaces
qc pass: p4lang: gre multicast routing
---------------------------------- 2024-06-19 09:28:02 24.6.19
no qc pass: dhcp with excluded address
failed: dhcp with excluded address
---------------------------------- 2024-06-19 09:56:58 24.6.19
no failed: dhcp with excluded address
qc pass: dhcp with excluded address
---------------------------------- 2024-06-26 19:29:32 24.6.26
no todo: server http / host * searchbar
no todo: server http / host * custom-remote >path/file>
no todo: server http / host * custom-local <text>
no todo: server http / host * webring-remote <path/file*>
no todo: server http / host * webring-local <text>