@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.6.26-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-06-26 19:42:49, took 00:13:16, with 60 workers, on 3440 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2024-06-26 20:49:06, took 00:12:26, with 60 workers, on 3440 cases, 0 failed, 0 traces, 4 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
