@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.6.26-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-06-26 19:42:49, took 00:13:16, with 60 workers, on 3440 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2024-06-26 20:49:06, took 00:12:26, with 60 workers, on 3440 cases, 0 failed, 0 traces, 4 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
