@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.6.26-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-06-26 19:52:06, took 00:09:00, with 60 workers, on 546 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2024-06-26 20:56:33, took 00:07:10, with 60 workers, on 546 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
