@@ -15779,3 +15779,5 @@ no todo: server http / host * custom-remote >path/file>
 no todo: server http / host * custom-local <text>
 no todo: server http / host * webring-remote <path/file*>
 no todo: server http / host * webring-local <text>
+---------------------------------- 2024-06-26 20:36:39 24.6.26
+no todo: server http / host * user-agent matcher with redirect
